# rs-ls-fast-raw

./: Cargo.toml  README.md  bench.md  rs-ls-fast-raw  rs-ls-fast-raw.wasm  run.sh
src/: ls.rs  main.rs
src/ls/: darwin.rs  linux_direct.rs
