[package]
name = "rs-ls-fast-raw"
version = "0.1.0"
edition = "2021"

description = "Faster ls(up to 10x faster on mac, 140% faster on linux)"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-ls-fast-raw/latest"
repository = "https://github.com/takanoriyanagitani/rs-ls-fast-raw"
keywords = [
    "ls",
	"fast",
	"cli",
]
categories = [
  "command-line-interface",
  "command-line-utilities",
]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.libc]
version = "0.2.169"
default-features = false
features = [
  "std",
]

[target.'cfg(target_os="linux")'.dependencies.linux-raw-sys]
version = "0.7.0"
default-features = false
features = [
	"errno",
	"general",
	"std",
]
